# database

./: .gitignore  .pyproject.toml.swp  2024-12-05T08-01-08.478185.parquet  Dockerfile  README.md  deduplication.py  docker-compose.yaml  pyproject.toml  requirements.txt  start.sh  test.py
logs/: logs.json
src/database/: db.py  get_all.py  get_search.py  main.py  sep_test.py  test.py
src/database/routers/: .exclusive_main.py.swp  .rank.py.swp  .tickets.py.swo  .tickets.py.swp  banner.py  consumer.py  exclusive_all.py  exclusive_main.py  log_handler.py  ml.py  rank.py  tickets.py  weekend.py
tests/: test_log.py
