[project]
name = "database"
version = "0.1.3"
description = "Default template for PDM package"
authors = [
    {name = "hahahellooo", email = "hahahello777@gmail.com"},
]
dependencies = [
    "pymongo>=4.9.2",
    "motor>=3.6.0",
    "fastapi>=0.115.5",
    "uvicorn>=0.32.1",
    "database @ file:///${PROJECT_ROOT}/",
    "dnspython>=2.7.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[dependency-groups]
test = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
